Mon Aug  8 13:51:14 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/data.c: separate variant type

Mon Aug  8 13:48:29 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/data.c: separate numeric type

Mon Aug  8 11:58:41 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/tds/data.c src/tds/tds_checks.c:
	* src/tds/token.c:
	- start moving some code to src/tds/data.c and use some callbacks
	  for data

Mon Aug  8 11:41:57 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/convert.c: return NOAVAIL converting money to datetime

Mon Aug  8 11:39:23 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/convert.c: collapse code

Mon Aug  8 11:16:39 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/convert.c: cleanup

Mon Aug  8 10:24:20 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/convert.c:
	- use auto variable directly in string_to_datetime

Mon Aug  8 09:27:50 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds_sysdep_public.h.in win32/tds_sysdep_public.h:
	- sync tds_sysdep_public

Mon Aug  8 09:09:16 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/getdata.c: use malloc to catch memory errors

Mon Aug  8 09:06:30 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/util.c: compile commented code is development enabled

Mon Aug  8 09:03:58 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/bulk.c: fix typo

Sat Aug  6 20:46:47 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/login.c: fix tds 7.3 connection

Thu Aug  4 06:32:16 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* win32/tds_sysdep_public.h:
	- change header inclusion order to avoid wrong redeclarations

Wed Jul 27 18:34:18 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/tds/query.c src/tds/token.c:
	- do not use tds9_ prefix, use tds72_ instead
